# substrait-mlir-contrib

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  .markdownlint.jsonc  .yapfignore  BUILD.bazel  BUILD.substrait-cpp.bazel  CMakeLists.txt  CONTRIBUTING.md  MODULE.bazel  README.md  REPO.bazel  WORKSPACE.bazel  extensions.bzl  pyproject.toml  requirements-unfrozen.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: bazel.yml  buildAndTestStructured.yml  build_and_test.yml  clang_format.yml  cmake_format.yml  coverage_stats.yml  dependabot-validate.yml  licence_check.yml  markdown.yml  pr_title.yml  yapf.yml  zizmore.yml
docs/: stats.md
docs/stats/: Makefile  stats.py
include/: CMakeLists.txt
include/structured-c/: Dialects.h
include/structured/Dialect/Substrait/Transforms/: Passes.h  Passes.td
include/substrait-mlir-c/: Dialects.h
include/substrait-mlir/Dialect/Substrait/IR/: CMakeLists.txt  Substrait.h  SubstraitAttrs.td  SubstraitDialect.td  SubstraitEnums.td  SubstraitInterfaces.td  SubstraitOps.td  SubstraitTypes.td
include/substrait-mlir/Dialect/Substrait/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Dialect/Substrait/IR/: CMakeLists.txt  Substrait.cpp
lib/Dialect/Substrait/Transforms/: CMakeLists.txt  EmitDeduplication.cpp
python/: CMakeLists.txt  StructuredDialects.cpp  SubstraitDialects.cpp  stubgen.patterns
python/mlir_structured/dialects/: SubstraitOps.td  substrait.py
python/substrait_mlir/_mlir_libs/_substraitDialects/: __init__.pyi  substrait.pyi
python/substrait_mlir/dialects/: SubstraitOps.td  substrait.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dialect/Substrait/: aggregate-invalid.mlir  aggregate.mlir  call.mlir  canonicalize.mlir  cast-invalid.mlir  cast.mlir  cross.mlir  emit-invalid.mlir  emit.mlir  extension-table.mlir  fetch.mlir  field-reference-invalid.mlir  field-reference.mlir  filter-invalid.mlir  filter.mlir  join.mlir  literal-invalid.mlir  literal.mlir  named-table-invalid.mlir  named-table.mlir  nullable-type-invalid.mlir  nullable-type.mlir  plan-invalid.mlir  plan-version.mlir  plan.mlir  project-invalid.mlir  project.mlir  relation-invalid.mlir  set-invalid.mlir  set.mlir  struct-type-invalid.mlir  struct-type.mlir  substrait-type.mlir  types-invalid.mlir  types.mlir  union-distinct-invalid.mlir  union-distinct.mlir
test/Transforms/Substrait/: emit-deduplication.mlir
test/python/dialects/substrait/: dialect.py  e2e_datafusion.py  e2e_duckdb.py  e2e_ibis.py  e2e_pyarrow.py  translate.py
tools/: CMakeLists.txt
tools/scripts/: normalize_json.py
tools/structured-lsp-server/: structured-lsp-server.cpp
tools/structured-opt/: structured-opt.cpp
tools/structured-translate/: structured-translate.cpp
tools/substrait-lsp-server/: CMakeLists.txt  substrait-lsp-server.cpp
tools/substrait-opt/: CMakeLists.txt  substrait-opt.cpp
tools/substrait-translate/: CMakeLists.txt  substrait-translate.cpp
utils/: find_vs.ps1
utils/bazel/: .bazelrc  BUILD.substrait-cpp.bazel  WORKSPACE.bazel  configure.bzl
utils/bazel/docker/: Dockerfile  run_docker.sh
utils/bazel/substrait-mlir-overlay/: BUILD.bazel
utils/bazel/substrait-mlir-overlay/python/: BUILD.bazel
