# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

# Format bazel BUILD and .bzl files with a standard convention
# Invoke as `bazel run @substrait-mlir//:buildifier`
buildifier(
    name = "buildifier",
)

# Substrait Dialect/IR
gentbl_cc_library(
    name = "MLIRSubstraitEnumsIncGen",
    strip_include_prefix = "include",
    tbl_outs = [
        (
            ["-gen-enum-decls"],
            "include/substrait-mlir/Dialect/Substrait/IR/SubstraitEnums.h.inc",
        ),
        (
            ["-gen-enum-defs"],
            "include/substrait-mlir/Dialect/Substrait/IR/SubstraitEnums.cpp.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/substrait-mlir/Dialect/Substrait/IR/SubstraitEnums.td",
)

gentbl_cc_library(
    name = "MLIRSubstraitAttrsIncGen",
    strip_include_prefix = "include",
    tbl_outs = [
        (
            ["-gen-attrdef-decls"],
            "include/substrait-mlir/Dialect/Substrait/IR/SubstraitAttrs.h.inc",
        ),
        (
            ["-gen-attrdef-defs"],
            "include/substrait-mlir/Dialect/Substrait/IR/SubstraitAttrs.cpp.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/substrait-mlir/Dialect/Substrait/IR/SubstraitAttrs.td",
)
